--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link href="./output.css" rel="stylesheet" />
   </head>
 
-  <body class="bg-[url('./bg.jpg')] bg-center bg-cover h-screen w-screen">
+  <body
+    class="bg-[url('./bgverysmall.jpg')] bg-center bg-cover h-screen w-screen"
+  >
     <div class="flex items-center justify-center w-full h-full flex-col">
       <svg
         class="w-56 h-24 text-slate-900"
