Use progressive background image.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body
-    class="bg-[url('./bgverysmall.jpg')] bg-center bg-cover h-screen w-screen"
+    class="bg-[url('./bgsmall_progressive.jpg')] bg-center bg-cover h-screen w-screen"
   >
     <div class="flex items-center justify-center w-full h-full flex-col">
       <svg
