--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,10 @@
     <link rel="preload" as="image" href="./bgsmall_progressive.jpg" />
   </head>
 
-  <body
-    class="bg-[url('./bgsmall_dark_progressive.jpg')] bg-center bg-cover h-screen w-screen"
-  >
+  <body class="bg-slate-100 bg-center bg-cover h-screen w-screen">
     <div class="flex items-center justify-center w-full h-full flex-col">
       <svg
-        class="w-56 h-24 text-slate-50 -mb-4"
+        class="w-56 h-24 text-slate-700 -mb-4"
         width="841"
         height="211"
         viewBox="0 0 841 211"
@@ -30,7 +28,6 @@
           fill="currentColor"
         />
       </svg>
-
       <div class="flex items-center gap-3">
         <a
           class="icon-wrapper"
