--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RibbonTree</title>
+    <title>RibbonTree — Music</title>
     <link href="./output.css" rel="stylesheet" />
     <link rel="preload" as="image" href="./bgsmall_progressive.jpg" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
   </head>
 
-  <body class="bg-slate-100 bg-center bg-cover h-screen w-screen">
+  <body class="bg-[url('./treebg.jpg')] bg-bottom bg-cover h-screen w-screen">
     <div class="flex items-center justify-center w-full h-full flex-col">
       <svg
-        class="w-56 h-24 text-slate-700 -mb-4"
+        class="w-56 h-24 text-slate-50 -mb-4"
         width="841"
         height="211"
         viewBox="0 0 841 211"
