--- a/src/index.html
+++ b/src/index.html
@@ -6,22 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RibbonTree — Music</title>
     <link href="./output.css" rel="stylesheet" />
-    <link rel="icon" type="image/svg+xml" href="./ribbontree_favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./ribbontree_favicon_black.svg"
+    />
     <script>
       const faviconElement = document.querySelector('link[rel="icon"]');
       const darkMedia = window?.matchMedia("(prefers-color-scheme: dark)");
-      darkMedia.addEventListener("change", (event) => {
-        return faviconElement.setAttribute(
+      const setFavicon = (isDark) => {
+        faviconElement.setAttribute(
           "href",
-          event.matches
-            ? "./ribbontree_favicon.svg"
+          isDark
+            ? "./ribbontree_favicon_white.svg"
             : "./ribbontree_favicon_black.svg"
         );
+      };
+      setFavicon(darkMedia.matches);
+      darkMedia.addEventListener("change", (event) => {
+        setFavicon(event.matches);
       });
     </script>
   </head>
 
-  <body class="bg-bottom bg-cover h-screen w-screen bg-neutral-50">
+  <body class="bg-bottom bg-cover h-screen w-screen bg-neutral-50 relative">
+    <div class="absolute bottom-0 left-0 w-screen h-screen overflow-hidden">
+      <video class="absolute bottom-0 left-0 w-full opacity-10" autoplay loop>
+        <source src="./video.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="flex items-center justify-center w-full h-full flex-col">
       <svg
         width="1036"
