Loop background video.

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   <body class="bg-bottom bg-cover h-screen w-screen bg-neutral-50 relative">
     <div class="absolute bottom-0 left-0 w-screen h-screen overflow-hidden">
       <video class="absolute bottom-0 left-0 w-full opacity-10" autoplay loop>
-        <source src="./video.mp4" type="video/mp4" />
+        <source src="./bg_looped.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="flex items-center justify-center w-full h-full flex-col">
