--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,15 @@
   </head>
 
   <body class="bg-bottom bg-cover h-screen w-screen bg-neutral-50 relative">
-    <div class="absolute bottom-0 left-0 w-screen h-screen overflow-hidden">
-      <video class="absolute bottom-0 left-0 w-full opacity-10" autoplay loop>
-        <source src="./bg_looped.mp4" type="video/mp4" />
-      </video>
+    <div
+      class="absolute top-0 left-0 w-screen overflow-hidden z-10"
+      style="opacity: 0.3"
+    >
+      <img src="bg2.jpg.jpg" class="w-full h-full" />
     </div>
-    <div class="flex items-center justify-center w-full h-full flex-col">
+    <div
+      class="absolute flex items-center justify-center w-screen h-screen flex-col z-20"
+    >
       <svg
         width="1036"
         height="306"
