--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       class="absolute top-0 left-0 w-screen overflow-hidden z-10"
       style="opacity: 0.3"
     >
-      <img src="bg2.jpg.jpg" class="w-full h-full" />
+      <img src="./bg2.jpg" class="w-full h-full" />
     </div>
     <div
       class="absolute flex items-center justify-center w-screen h-screen flex-col z-20"
