--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,14 @@
     </script>
   </head>
 
-  <body class="bg-bottom bg-cover h-screen w-screen bg-neutral-50 relative">
+  <body
+    class="bg-[url('./bg2.jpg')] bg-top bg-cover h-screen w-screen relative"
+  >
     <div
-      class="absolute top-0 left-0 w-screen overflow-hidden z-10"
-      style="opacity: 0.3"
-    >
-      <img src="./bg2.jpg" class="w-full h-full" />
-    </div>
+      class="bg-neutral-200 absolute top-0 w-full h-full opacity-80 z-10"
+    ></div>
     <div
-      class="absolute flex items-center justify-center w-screen h-screen flex-col z-20"
+      class="flex items-center justify-center w-full h-full flex-col z-50 absolute"
     >
       <svg
         width="1036"
